#1 adding capability to print out the last response from the server that was sent to the client.

--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,3 +1,4 @@
 default: FIG_NEWTON_FILE=mock.yml --tags ~@wip --no-source --color --format pretty
 report: FIG_NEWTON_FILE=mock.yml --no-source --color --format progress --format html --out=features_report.html
 wip: FIG_NEWTON_FILE=mock.yml --tags @wip --no-source --color --format pretty
+core: FIG_NEWTON_FILE=mock.yml --tags @core --no-source --color --format pretty
