--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,4 +1,5 @@
 default: FIG_NEWTON_FILE=mock.yml --tags ~@wip --no-source --color --format pretty
-report: FIG_NEWTON_FILE=mock.yml --no-source --color --format progress --format html --out=features_report.html
+report: FIG_NEWTON_FILE=mock.yml --no-source --color --format progress --format html --out='<%= Time.new.strftime('%Y-%m-%d_%H_%M_%S') %>.html'
+practice: FIG_NEWTON_FILE=mock.yml --no-source --color --format progress --format html --out='<%= Time.new.strftime('%Y-%m-%d_%H_%M_%S') %>.html'
 wip: FIG_NEWTON_FILE=mock.yml --tags @wip --color --format pretty
 core: FIG_NEWTON_FILE=mock.yml --tags @core --no-source --color --format pretty
