--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ rvm:
   - 2.1.0
   - 2.2.0
   - ruby-head
-  - jruby-18mode
   - jruby-19mode
   - jruby-head
   - rbx-2
@@ -24,29 +23,27 @@ matrix:
       jdk: openjdk7
     - rvm: 2.0.0
       jdk: oraclejdk7
-    - rvm: 2.0.0
-      jdk: oraclejdk8
     - rvm: 2.1.0
       jdk: openjdk6
     - rvm: 2.1.0
       jdk: openjdk7
     - rvm: 2.1.0
       jdk: oraclejdk7
-    - rvm: 2.1.0
-      jdk: oraclejdk8
     - rvm: 2.2.0
       jdk: openjdk6
     - rvm: 2.2.0
       jdk: openjdk7
     - rvm: 2.2.0
       jdk: oraclejdk7
-    - rvm: 2.2.0
-      jdk: oraclejdk8
+    - rvm: rbx-2
+      jdk: openjdk6
+    - rvm: rbx-2
+      jdk: openjdk7
+    - rvm: rbx-2
+      jdk: oraclejdk7
     - rvm: ruby-head
       jdk: openjdk6
     - rvm: ruby-head
       jdk: openjdk7
     - rvm: ruby-head
       jdk: oraclejdk7
-    - rvm: ruby-head
-      jdk: oraclejdk8
