--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,15 @@
 language: ruby
-rvm:
-  - 2.0.0
-  - 2.1.0
-  - 2.2.0
-  - ruby-head
-  - jruby-19mode
-  - jruby-head
-  - rbx-2
-jdk:
-  - openjdk6
-  - openjdk7
-  - oraclejdk7
-  - oraclejdk8
 matrix:
+  include:
+    - rvm: 2.0.0
+    - rvm: 2.1.0
+    - rvm: 2.2.0
+    - rvm: rbx-2
+    - rvm: jruby-19mode
+      jdk: openjdk6
+      jdk: openjdk7
+      jdk: oraclejdk7
+      jdk: oraclejdk8
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
-  exclude:
-    - rvm: 2.0.0
-      jdk: openjdk6
-    - rvm: 2.0.0
-      jdk: openjdk7
-    - rvm: 2.0.0
-      jdk: oraclejdk7
-    - rvm: 2.1.0
-      jdk: openjdk6
-    - rvm: 2.1.0
-      jdk: openjdk7
-    - rvm: 2.1.0
-      jdk: oraclejdk7
-    - rvm: 2.2.0
-      jdk: openjdk6
-    - rvm: 2.2.0
-      jdk: openjdk7
-    - rvm: 2.2.0
-      jdk: oraclejdk7
-    - rvm: rbx-2
-      jdk: openjdk6
-    - rvm: rbx-2
-      jdk: openjdk7
-    - rvm: rbx-2
-      jdk: oraclejdk7
-    - rvm: ruby-head
-      jdk: openjdk6
-    - rvm: ruby-head
-      jdk: openjdk7
-    - rvm: ruby-head
-      jdk: oraclejdk7
