Update to mask bad smell.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -30,6 +30,9 @@ engines:
     FeatureEnvy:
       exclude:
       - RestBaby::Client#print_request
+    InstanceVariableAssumption:
+      exclude:
+      - RestBaby::Client
     TooManyInstanceVariables:
       exclude:
       - RestBaby::Client
